# nasa-auth-project

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  nasa_artifacts.db  nasa_cache.db  pyproject.toml
Sample_Nasarequest_files/: asteroids_neows.py  donki_nocache.py  eonet_events_nocache.py  epic.py  insight_mars_weather.py
alembic/: env.py
alembic/versions/: 20260424_01_create_daily_api_cache.py  20260424_02_create_auth_users.py
app/api/: auth.py  nasa.py
app/application/: nasa_service.py  prompt_manager.py  user_service.py
app/core/: security.py
app/domain/: nasa.py  user.py
app/infrastructure/: config.py  db.py  logging.py  nasa_client.py  security.py  telemetry.py
app/interfaces/: main.py
app/interfaces/api/: auth.py  nasa.py
app/interfaces/dependencies/: auth.py  db.py  nasa.py  rate_limit.py
app/interfaces/schemas/: nasa.py  token.py  user.py
app/models/: daily_api_cache.py  user.py
app/schemas/: token.py  user.py
app/services/: nasa.py  user.py
app/slices/: agent_manager.py  eval.py  fallback.py  prompt_registry.py  tracing.py
app/utils/: rate_limit.py
tests/: test_auth_scopes.py  test_e2e_smoke.py  test_nasa_api.py  test_nasa_cache_daily.py  test_nasa_client.py  test_nasa_service.py  test_structured_logging.py  test_telemetry.py
