[project]
name = "nasa-auth-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "python-dotenv>=1.1.1",
    "pytest>=8.4.2",
    "uvicorn>=0.38.0",
]
