[project]
name = "nasa-auth-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-httpx>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "code-review-graph",
]

[tool.uv.sources]
code-review-graph = { path = "../../code-review-graph-main", editable = true }
